src/styles/css/global.css
@import './reset.css';
@import './nprogress.css';
@import './transition.css';

html,
body,
#app {
  height: 100%;
  text-autospace: normal;
}

html {
  overflow-x: hidden;
  color: rgb(var(--base-text-color));
}

html.dark body {
  background: #101828;
}

